--- a/_config.yml
+++ b/_config.yml
@@ -53,6 +53,8 @@ social:
 # ----------------------- #
 
 menu:
+  - title: Home
+    url: "/"
   - title: Specification
     url: "/trace-specification/docs/specifications.html"
   - title: Infrastructure
