--- a/_config.yml
+++ b/_config.yml
@@ -55,6 +55,8 @@ social:
 menu:
   - title: Home
     url: "/"
+  - title: Jobs
+    url: "/jobs/"
   - title: Specification
     url: "/trace-specification/docs/specifications.html"
   - title: Infrastructure
